gcc/testsuite/rust/compile/bad_type1.rs
fn main() {
    let logical: bool = 123; // { dg-error "mismatched types, expected .bool. but got .<integer>." }
}
